--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -58,8 +58,6 @@
     <ClInclude Include="SignalId.h" />
     <ClInclude Include="SignalNr.h" />
     <ClInclude Include="SignalSource.h" />
-    <ClInclude Include="SimulationTime.h" />
-    <ClInclude Include="targetver.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="TrackNr.h" />
     <ClInclude Include="UPNobList.h" />
@@ -102,6 +100,7 @@
     <ClCompile Include="Signal.cpp" />
     <ClCompile Include="SignalFactory.cpp" />
     <ClCompile Include="SignalGenerator.cpp" />
+    <ClCompile Include="SimulationTime.ixx" />
     <ClCompile Include="Spike.ixx" />
     <ClCompile Include="tHighlightType.ixx" />
     <ClCompile Include="Track.cpp" />
