--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -165,9 +165,7 @@
     <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="WrapActiveSigGen.h" />
     <ClInclude Include="WrapCreateNob.h" />
-    <ClInclude Include="NNetWrapperBase.h" />
     <ClInclude Include="WrapDescription.h" />
-    <ClInclude Include="WrapEEGcoordSys.h" />
     <ClInclude Include="WrapGlobalParameter.h" />
     <ClInclude Include="WrapNobParameter.h" />
     <ClInclude Include="WrapNrOfNobs.h" />
@@ -178,11 +176,11 @@
     <ClInclude Include="WrapSignalData.h" />
     <ClInclude Include="WrapSignalGenerator.h" />
     <ClInclude Include="WrapSignalInfo.h" />
-    <ClInclude Include="WrapSimulationTime.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Commands\AttachSigGen2ConnCmd.ixx" />
     <ClCompile Include="NNetModelIO.cpp" />
+    <ClCompile Include="NNetWrapperBase.ixx" />
     <ClCompile Include="WrapCreateNob.cpp" />
     <ClCompile Include="WrapProtocol.ixx" />
     <ClCompile Include="WrapSimulationTime.ixx" />
