--- a/NNet/ModelIO/ModelIO.vcxproj.filters
+++ b/NNet/ModelIO/ModelIO.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClCompile Include="WrapSimulationTime.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NNetWrapperBase.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputOutputUI.h">
@@ -29,9 +32,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="NNetModelStorage.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="NNetWrapperBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WrapCreateNob.h">
@@ -52,9 +52,6 @@
     <ClInclude Include="WrapSignal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WrapSimulationTime.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="WrapNrOfTracks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -71,9 +68,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WrapSignalInfo.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="WrapEEGcoordSys.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WrapSetSigGen.h">
