--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -21,9 +21,7 @@
   <ItemGroup>
     <ClInclude Include="..\Commands\NNetCommand.h" />
     <ClInclude Include="BaseKnot.h" />
-    <ClInclude Include="CopySelectedNobs.h" />
     <ClInclude Include="DescriptionUI.h" />
-    <ClInclude Include="framework.h" />
     <ClInclude Include="InputConnector.h" />
     <ClInclude Include="InputLine.h" />
     <ClInclude Include="IoConnector.h" />
@@ -69,6 +67,7 @@
     <ClCompile Include="AutoOpen.ixx" />
     <ClCompile Include="BaseKnot.cpp" />
     <ClCompile Include="CopySelectedNobs.cpp" />
+    <ClCompile Include="CopySelectedNobs.ixx" />
     <ClCompile Include="InputConnector.cpp" />
     <ClCompile Include="InputLine.cpp" />
     <ClCompile Include="IoConnector.cpp" />
