--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -169,10 +169,8 @@
     <ClInclude Include="WrapNobParameter.h" />
     <ClInclude Include="WrapSetParam.h" />
     <ClInclude Include="WrapSetSigGen.h" />
-    <ClInclude Include="WrapSignal.h" />
     <ClInclude Include="WrapSignalData.h" />
     <ClInclude Include="WrapSignalGenerator.h" />
-    <ClInclude Include="WrapSignalInfo.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Commands\AttachSigGen2ConnCmd.ixx" />
@@ -184,6 +182,8 @@
     <ClCompile Include="WrapNrOfNobs.ixx" />
     <ClCompile Include="WrapNrOfTracks.ixx" />
     <ClCompile Include="WrapProtocol.ixx" />
+    <ClCompile Include="WrapSignal.ixx" />
+    <ClCompile Include="WrapSignalInfo.ixx" />
     <ClCompile Include="WrapSimulationTime.ixx" />
     <ClCompile Include="WrapVoltage.cpp" />
     <ClCompile Include="WrapVoltage.ixx" />
