--- a/NNet/ModelIO/ModelIO.vcxproj.filters
+++ b/NNet/ModelIO/ModelIO.vcxproj.filters
@@ -35,6 +35,12 @@
     <ClCompile Include="WrapActiveSigGen.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WrapSignalInfo.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WrapSignal.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputOutputUI.h">
@@ -52,9 +58,6 @@
     <ClInclude Include="WrapNobParameter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WrapSignal.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="WrapSetParam.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -65,9 +68,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WrapSignalGenerator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="WrapSignalInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WrapSetSigGen.h">
