--- a/NNet/ModelIO/ModelIO.vcxproj.filters
+++ b/NNet/ModelIO/ModelIO.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="WrapSignal.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WrapSignalData.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputOutputUI.h">
@@ -59,9 +62,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WrapSetParam.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="WrapSignalData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WrapActiveSigGen.h">
