--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -167,7 +167,6 @@
     <ClInclude Include="WrapDescription.h" />
     <ClInclude Include="WrapGlobalParameter.h" />
     <ClInclude Include="WrapNobParameter.h" />
-    <ClInclude Include="WrapSetParam.h" />
     <ClInclude Include="WrapSetSigGen.h" />
     <ClInclude Include="WrapSignalGenerator.h" />
   </ItemGroup>
@@ -181,6 +180,7 @@
     <ClCompile Include="WrapNrOfNobs.ixx" />
     <ClCompile Include="WrapNrOfTracks.ixx" />
     <ClCompile Include="WrapProtocol.ixx" />
+    <ClCompile Include="WrapSetParam.ixx" />
     <ClCompile Include="WrapSignal.ixx" />
     <ClCompile Include="WrapSignalData.ixx" />
     <ClCompile Include="WrapSignalInfo.ixx" />
