--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Script.cpp" />
     <ClCompile Include="Scanner.cpp" />
+    <ClCompile Include="Script.ixx" />
     <ClCompile Include="ScriptStack.ixx" />
     <ClCompile Include="Symtab.cpp" />
     <ClCompile Include="Symtab.ixx" />
@@ -186,7 +187,6 @@
   <ItemGroup>
     <ClInclude Include="Input.h" />
     <ClInclude Include="Scanner.h" />
-    <ClInclude Include="Script.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
