--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -56,7 +56,6 @@
     <ClInclude Include="SignalSource.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="UPNobList.h" />
-    <ClInclude Include="UPSensorList.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Analyzer.cpp" />
@@ -105,6 +104,7 @@
     <ClCompile Include="TrackNr.ixx" />
     <ClCompile Include="UPNobList.cpp" />
     <ClCompile Include="UPSensorList.cpp" />
+    <ClCompile Include="UPSensorList.ixx" />
     <ClCompile Include="UPSigGenList.cpp" />
     <ClCompile Include="UPSigGenList.ixx" />
   </ItemGroup>
