--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -163,7 +163,6 @@
     <ClInclude Include="InputOutputUI.h" />
     <ClInclude Include="NNetModelIO.h" />
     <ClInclude Include="NNetModelStorage.h" />
-    <ClInclude Include="WrapActiveSigGen.h" />
     <ClInclude Include="WrapDescription.h" />
     <ClInclude Include="WrapSetSigGen.h" />
   </ItemGroup>
@@ -175,6 +174,7 @@
     <ClCompile Include="WrapActiveSigGen.ixx" />
     <ClCompile Include="WrapCreateNob.cpp" />
     <ClCompile Include="WrapCreateNob.ixx" />
+    <ClCompile Include="WrapDescription.ixx" />
     <ClCompile Include="WrapGlobalParameter.ixx" />
     <ClCompile Include="WrapNobParameter.ixx" />
     <ClCompile Include="WrapNrOfNobs.ixx" />
