--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -39,7 +39,6 @@
     <ClInclude Include="NNetParameters.h" />
     <ClInclude Include="NNetWrapperHelpers.h" />
     <ClInclude Include="Nob.h" />
-    <ClInclude Include="NobException.h" />
     <ClInclude Include="NobId.h" />
     <ClInclude Include="NobType.h" />
     <ClInclude Include="OutputConnector.h" />
@@ -80,6 +79,7 @@
     <ClCompile Include="NNetParameters.cpp" />
     <ClCompile Include="NNetWrapperHelpers.cpp" />
     <ClCompile Include="Nob.cpp" />
+    <ClCompile Include="NobException.ixx" />
     <ClCompile Include="NobIdList.cpp" />
     <ClCompile Include="NobIdList.ixx" />
     <ClCompile Include="NobType.cpp" />
