--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="ErrHndl.cpp" />
     <ClCompile Include="ErrHndl.ixx" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Input.ixx" />
     <ClCompile Include="Scanner.ixx" />
     <ClCompile Include="Script.cpp" />
     <ClCompile Include="Scanner.cpp" />
@@ -184,9 +185,6 @@
     <ProjectReference Include="..\Utilities\Utilities.vcxproj">
       <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Input.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
