--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -162,13 +162,13 @@
   <ItemGroup>
     <ClInclude Include="InputOutputUI.h" />
     <ClInclude Include="NNetModelIO.h" />
-    <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="WrapSetSigGen.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Commands\AttachSigGen2ConnCmd.ixx" />
     <ClCompile Include="Module.ixx" />
     <ClCompile Include="NNetModelIO.cpp" />
+    <ClCompile Include="NNetModelStorage.ixx" />
     <ClCompile Include="NNetWrapperBase.ixx" />
     <ClCompile Include="WrapActiveSigGen.ixx" />
     <ClCompile Include="WrapCreateNob.cpp" />
