--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -162,7 +162,6 @@
   <ItemGroup>
     <ClInclude Include="InputOutputUI.h" />
     <ClInclude Include="NNetModelIO.h" />
-    <ClInclude Include="WrapSetSigGen.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Commands\AttachSigGen2ConnCmd.ixx" />
@@ -180,6 +179,7 @@
     <ClCompile Include="WrapNrOfTracks.ixx" />
     <ClCompile Include="WrapProtocol.ixx" />
     <ClCompile Include="WrapSetParam.ixx" />
+    <ClCompile Include="WrapSetSigGen.ixx" />
     <ClCompile Include="WrapSignal.ixx" />
     <ClCompile Include="WrapSignalData.ixx" />
     <ClCompile Include="WrapSignalGenerator.ixx" />
