--- a/NNet/ModelIO/ModelIO.vcxproj.filters
+++ b/NNet/ModelIO/ModelIO.vcxproj.filters
@@ -68,11 +68,11 @@
     <ClCompile Include="WrapSetSigGen.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputOutputUI.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="InputOutputUI.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="NNetModelIO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
