--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -35,7 +35,6 @@
     <ClInclude Include="NNetModelReaderInterface.h" />
     <ClInclude Include="NNetModelWriterInterface.h" />
     <ClInclude Include="NNetParameters.h" />
-    <ClInclude Include="NNetWrapperHelpers.h" />
     <ClInclude Include="Nob.h" />
     <ClInclude Include="NobType.h" />
     <ClInclude Include="OutputConnector.h" />
@@ -74,6 +73,7 @@
     <ClCompile Include="NNetModelWriterInterface.cpp" />
     <ClCompile Include="NNetParameters.cpp" />
     <ClCompile Include="NNetWrapperHelpers.cpp" />
+    <ClCompile Include="NNetWrapperHelpers.ixx" />
     <ClCompile Include="Nob.cpp" />
     <ClCompile Include="NobException.ixx" />
     <ClCompile Include="NobId.ixx" />
