--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -40,7 +40,6 @@
     <ClInclude Include="OutputLine.h" />
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="Sensor.h" />
     <ClInclude Include="Signal.h" />
     <ClInclude Include="SignalFactory.h" />
     <ClInclude Include="SignalGenerator.h" />
@@ -88,6 +87,7 @@
     <ClCompile Include="PipeList.cpp" />
     <ClCompile Include="PipeList.ixx" />
     <ClCompile Include="Sensor.cpp" />
+    <ClCompile Include="Sensor.ixx" />
     <ClCompile Include="SigGenDynamicData.cpp" />
     <ClCompile Include="SigGenDynamicData.ixx" />
     <ClCompile Include="SigGenId.ixx" />
