--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -19,13 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Commands\NNetCommand.h" />
     <ClInclude Include="BaseKnot.h" />
     <ClInclude Include="InputConnector.h" />
     <ClInclude Include="InputLine.h" />
     <ClInclude Include="IoConnector.h" />
     <ClInclude Include="IoLine.h" />
-    <ClInclude Include="IoLinePair.h" />
     <ClInclude Include="Knot.h" />
     <ClInclude Include="MicroMeterPosDir.h" />
     <ClInclude Include="ModelDescription.h" />
@@ -59,6 +57,7 @@
     <ClCompile Include="InputLine.cpp" />
     <ClCompile Include="IoConnector.cpp" />
     <ClCompile Include="IoLine.cpp" />
+    <ClCompile Include="IoLinePair.ixx" />
     <ClCompile Include="Knot.cpp" />
     <ClCompile Include="MicroMeterPntVector.cpp" />
     <ClCompile Include="MicroMeterPointVector.ixx" />
