--- a/NNet/NNetSimu/NNetSimu.vcxproj
+++ b/NNet/NNetSimu/NNetSimu.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="Version.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Accelerators.ixx" />
     <ClCompile Include="NNetSimu.cpp" />
   </ItemGroup>
   <ItemGroup>
