--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -27,7 +27,6 @@
     <ClInclude Include="MicroMeterPosDir.h" />
     <ClInclude Include="ModelDescription.h" />
     <ClInclude Include="MonitorData.h" />
-    <ClInclude Include="Neuron.h" />
     <ClInclude Include="NNetModel.h" />
     <ClInclude Include="NNetModelReaderInterface.h" />
     <ClInclude Include="NNetModelWriterInterface.h" />
@@ -63,6 +62,7 @@
     <ClCompile Include="MicroMeterPosDir.cpp" />
     <ClCompile Include="MonitorData.cpp" />
     <ClCompile Include="Neuron.cpp" />
+    <ClCompile Include="Neuron.ixx" />
     <ClCompile Include="NNetColors.ixx" />
     <ClCompile Include="NNetModel.cpp" />
     <ClCompile Include="NNetModelReaderInterface.cpp" />
