--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -143,7 +143,7 @@
     <ClCompile Include="SetSigGenStaticDataCmd.ixx" />
     <ClCompile Include="SetTargetNobCmd.ixx" />
     <ClCompile Include="SIgGenCommand.ixx" />
-    <ClCompile Include="SIngleNobAnimation.ixx" />
+    <ClCompile Include="SingleNobAnimation.ixx" />
     <ClCompile Include="SizeSelectionCmd.ixx" />
     <ClCompile Include="SizeSensorCmd.ixx" />
     <ClCompile Include="SplitNeuronCmd.ixx" />
