--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -189,7 +189,7 @@
     <ClCompile Include="SIgGenCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SIngleNobAnimation.ixx">
+    <ClCompile Include="SingleNobAnimation.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SizeSelectionCmd.ixx">
