--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -35,7 +35,6 @@
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Signal.h" />
-    <ClInclude Include="SignalFactory.h" />
     <ClInclude Include="SignalGenerator.h" />
     <ClInclude Include="SignalSource.h" />
     <ClInclude Include="UPNobList.h" />
@@ -92,6 +91,7 @@
     <ClCompile Include="SigGenStaticData.ixx" />
     <ClCompile Include="Signal.cpp" />
     <ClCompile Include="SignalFactory.cpp" />
+    <ClCompile Include="SIgnalFactory.ixx" />
     <ClCompile Include="SignalGenerator.cpp" />
     <ClCompile Include="SignalId.ixx" />
     <ClCompile Include="SignalNr.ixx" />
